--- a/index.html
+++ b/index.html
@@ -5,158 +5,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
 <body>        
-  <!-- Landing page -->
-  <div class="landing" id="home">
-      <header>
-        <!-- Navbar -->
-          <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-              <div class="container-fluid ">
-                  <a class="navbar-brand" href="#home">Domino Inc.</a>
-                  <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-                      <span class="navbar-toggler-icon"></span>
-                  </button>
-                  <div class="collapse navbar-collapse " id="navbarSupportedContent">
-                      <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
-                      <li class="nav-item">
-                          <a class="nav-link active" aria-current="page" href="#home">Home</a>
-                      </li>
-                      <li class="nav-item">
-                          <a class="nav-link" href="#about">About</a>
-                      </li>
-                      <li class="nav-item dropdown">
-                          <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                          More
-                          </a>
-                          <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-                          <li><a class="dropdown-item" href="#gallery">Gallery</a></li>
-                          </ul>
-                      </li>
-                      </ul>
-                  </div>
-              </div>
-          </nav>
-      </header>
-      <!-- Subscribe -->
-      <div class="container d-flex align-items-center flex-column subscribe">
-          <div>
-            <header>
-              <h1>Making you happy since 2014!</h1>
-            </header>
-            <section class="d-flex align-items-center flex-column">
-              <a href="https://mailchi.mp/a15f465aa3f2/startup-landing-page">
-                <button type="button" class="btn btn-dark btn-subscribe">Find out more</button>
-              </a>
-            </section>
-          </div>      
-        </div>
-  </div>
-            <!-- About -->
-  <div class="margin-background" id="about">
-      <div class="container">
-          <div class="row">
-              <div class="col col-lg-6 col-sm-9 col-md-6">
-                  <section>
-                      <h2  class="top-margin">About Domino</h2>
-                      <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Blanditiis quibusdam debitis culpa, odio aperiam tempore nesciunt perferendis non doloremque? Itaque et corporis omnis nulla, iste cumque magnam saepe autem optio?</p>
-                      <p>Blanditiis quibusdam debitis culpa, odio aperiam tempore nesciunt perferendis non doloremque? Itaque et corporis omnis nulla, iste cumque magnam saepe autem optio?</p>
-                  </section>
-              </div>
-              <div class="col col-lg-6 col-sm-9 col-md-6">
-                  <img class="about-image top-margin" src="assets/images/about 1.jpg" alt="black cat picture">
-              </div>
-          </div>
-          <div class="div-margin row">
-              <div class="col col-lg-6 col-sm-9 col-md-6">
-                  <section>
-                      <h2  class="top-margin">About Cats</h2>
-                      <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Blanditiis quibusdam debitis culpa, odio aperiam tempore nesciunt perferendis non doloremque? Itaque et corporis omnis nulla, iste cumque magnam saepe autem optio?</p>
-                      <p> Blanditiis quibusdam debitis culpa, odio aperiam tempore nesciunt perferendis non doloremque? Itaque et corporis omnis nulla, iste cumque magnam saepe autem optio?</p>
-                  </section>
-              </div>
-              <div class="col col-lg-6 col-sm-9 col-md-6 order-first">
-                <img class="about-image" src="assets/images/about 2.jpg" alt="black kitten picture">
-            </div>
-          </div>
-      </div>
-  </div>
-<!-- Gallery -->
-  <div class="margin-background" id="gallery">
-    <header class="container">
-      <h1 class="gallery-header">Gallery</h1>
-    </header>
-    <div class="container top-margin d-flex flex-row">
-        <div class="row">
-            <div class="col col-md-4 gallery-margins" >
-                <img class="gallery-img image-fluid" src="assets/images/cat 1.jpg">
-            </div>
-            <div class="col col-md-4 gallery-margins">
-                <img class="gallery-img image-fluid" src="assets/images/cat 2.jpg">
-            </div>
-            <div class="col col-md-4 gallery-margins">
-                <img  class="gallery-img image-fluid" src="assets/images/cat 3.jpg">
-            </div>
-            <div class="col col-md-4 gallery-margins">
-                <img  class="gallery-img image-fluid" src="assets/images/cat 4.jpg">
-            </div>
-            <div class="col col-md-4 gallery-margins">
-                <img  class="gallery-img image-fluid" src="assets/images/cat 5.jpg">
-            </div>
-            <div class="col col-md-4 gallery-margins">
-                <img class="gallery-img image-fluid" src="assets/images/cat 6.jpg">
-            </div>
-            <div class="col col-md-4 gallery-margins">
-              <img class="gallery-img image-fluid" src="assets/images/cat 7.jpg">
-          </div>
-          <div class="col col-md-4 gallery-margins">
-            <img class="gallery-img image-fluid" src="assets/images/cat 8.jpg">
-          </div>
-          <div class="col col-md-4 gallery-margins">
-            <img class="gallery-img image-fluid" src="assets/images/cat 9.jpg">
-          </div>
-        </div>
-    </div>
-  </div>
-
-    <!-- Footer -->
-  <div class="margin-background">
-  <footer class="bg-light text-center ">
-    <div class="container p-2">
-      <!-- Social media -->
-      <section class="mb-4">
-        <a class="btn btn-primary btn-floating m-1" style="background-color: #3b5998" href="https://www.facebook.com" role="button"><i class="fab fa-facebook-square"></i></a>
-        <a class="btn btn-primary btn-floating m-1" style="background-color: #55acee" href="https://twitter.com/" role="button"><i class="fab fa-twitter"></i></a>
-        <a class="btn btn-primary btn-floating m-1" style="background-color: #ac2bac" href="https://www.instagram.com" role="button"><i class="fab fa-instagram"></i></a>
-        <a class="btn btn-primary btn-floating m-1" style="background-color: #0082ca" href="https://www.linkedin.com" role="button"><i class="fab fa-linkedin-in"></i></a>
-        <a class="btn btn-primary btn-floating m-1" style="background-color: #333333" href="https://github.com/marizaridze" role="button"><i class="fab fa-github"></i></a>
-      </section>
-    <!-- Subscribe -->
-      <section class="">
-        <form action="">
-          <div class="row d-flex justify-content-center">
-            <div class="col-auto">
-              <p class="pt-2">
-                <strong>Sign up for our newsletter</strong>
-              </p>
-            </div>
-            <div class="col-auto">
-              <a href="https://mailchi.mp/a15f465aa3f2/startup-landing-page">
-                <button type="button" class="btn btn-dark mb-2">
-                  Subscribe
-                </button>
-              </a>
-            </div>
-          </div>
-        </form>
-      </section>
-  </div>
-  <div class="text-center p-2" style="background-color: rgba(0, 0, 0, 0.2)">
-    © 2021 Copyright: Domino Inc.
-  </div>
-  </footer>
-</div>
-<!-- back to top -->
-
-
-<!-- Javascript -->
+Hello World
 </body>
 </html>
